RESOLVED FIXED84260
REGRESSION(102040): Auto-table layout with percent width doesn't shrink-to-fit content a cell with colspan
https://bugs.webkit.org/show_bug.cgi?id=84260
Summary REGRESSION(102040): Auto-table layout with percent width doesn't shrink-to-fi...
Julien Chaffraix
Reported 2012-04-18 11:32:06 PDT
This is an unexpected change of bug 34758. Bug 34758 made us abide by percent width when there are only percent columns on a colspan. The bug is simple and stems from the fact that we are setting the min / max effective column width but forget to update the cell's min / max (remaining) logical width like the rest of the code. Patch and test case to follow shortly.
Attachments
Propsed patch 1: Account for allocated min / max cell's logical width. (6.13 KB, patch)
2012-04-18 11:56 PDT, Julien Chaffraix
no flags
Julien Chaffraix
Comment 1 2012-04-18 11:56:00 PDT
Created attachment 137735 [details] Propsed patch 1: Account for allocated min / max cell's logical width.
WebKit Review Bot
Comment 2 2012-04-18 16:08:11 PDT
Comment on attachment 137735 [details] Propsed patch 1: Account for allocated min / max cell's logical width. Clearing flags on attachment: 137735 Committed r114574: <http://trac.webkit.org/changeset/114574>
WebKit Review Bot
Comment 3 2012-04-18 16:08:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.