REGRESSION(102040): Auto-table layout with percent width doesn't shrink-to-fit content a cell with colspan https://bugs.webkit.org/show_bug.cgi?id=84260

Reviewed by Ojan Vafai.

Source/WebCore:

Tests: fast/table/td-width-fifty-percent-regression-expected.html
       fast/table/td-width-fifty-percent-regression.html

* rendering/AutoTableLayout.cpp:
(WebCore::AutoTableLayout::calcEffectiveLogicalWidth):
As we are spreading the cell's min / max logical width, we should be updating them.
This prevents the following logic getting confused and allocating more than needed.

LayoutTests:

* fast/table/td-width-fifty-percent-regression-expected.html: Added.
* fast/table/td-width-fifty-percent-regression.html: Added.


Canonical link: https://commits.webkit.org/101797@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114574 268f45cc-cd09-0410-ab3c-d52691b4dbfc